# KirasFM

./: CITATION.cff  CMakeLists.txt  README.md  main.cc  options.prm
GridGenerator/: 6er_waveguide.cc  diamond_fin.cc  kirasfm_grid_generator.cc  nano_particle.cc  nano_particle_2.cc  thin_layers.cc  y-beamsplitter.cc
include/: boundary_values.h  cross_product.h  fe_nedelec_sk.h  hanging_nodes.h  kirasfm_grid_generator.h  maxwell_solver.h  parameter_reader.h  post_processing.h  refinement_communicator.h  surface_communicator.h  write_data_table.h
python/: silverball.py
source/: boundary_values.cc  fe_nedelec_sk.cc  maxwell_solver.cc  parameter_reader.cc  refinement_communicator.cc  surface_communicator.cc  write_data_table.cc
